--- a/app/src/main/res/layout/activity_nested_scroll_test.xml
+++ b/app/src/main/res/layout/activity_nested_scroll_test.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffff44ff"
     android:orientation="vertical"
-    tools:context="com.song.example.nestedscroll.Main4Activity">
+    tools:context="com.song.example.nestedscroll.NestedScrollTestActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,17 +14,10 @@
         android:background="#ff444444"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="AAAAAAAAAAAA"
-            android:textColor="#ffff0000" />
-
         <Button
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:text="BBBBBB"
+            android:text="Test"
             android:textColor="@color/aaa" />
 
     </LinearLayout>
