Fix service bugs.
Signed-off-by: wangsongtao <songtao542@gmail.com>

--- a/app/src/main/res/layout/activity_dagger_test.xml
+++ b/app/src/main/res/layout/activity_dagger_test.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.song.example.dagger.Main6Activity">
+    tools:context="com.song.example.dagger.DaggerTestActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
