Add account demo
Signed-off-by: songtao542 <songtao542@gmail.com>

--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -44,6 +44,11 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="@string/title_activity_rxjava_test" />
+        <Button
+            android:id="@+id/account_test"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="@string/title_activity_account_test" />
 
 
     </LinearLayout>
