--- a/app/src/main/res/layout/activity_tile_test.xml
+++ b/app/src/main/res/layout/activity_tile_test.xml
@@ -5,13 +5,18 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.song.example.tile.TileTestActivity">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello World!"
-        android:gravity="left"
-        android:id="@+id/textView" />
+        android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="left"
+            android:text="Hello World!" />
+    </ScrollView>
 </LinearLayout>
