--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#444444</color>
     <color name="colorPrimaryDark">#444444</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#FF00FF</color>
 </resources>
