--- a/app/src/main/res/layout/activity_jni.xml
+++ b/app/src/main/res/layout/activity_jni.xml
@@ -9,6 +9,14 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="60dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </android.support.constraint.ConstraintLayout>
